<resources>
    <string name="app_name">Pure Life</string>
    <string name="menu_item_escanear">Escanear</string>
    <string name="menu_item_parar_escanear">Parar</string>
    <string name="title_activity_ajustes">AjustesActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ajustes_alerta_notificacion_gas_titulo">Tengo problemas respiratorios</string>
    <string name="ajustes_notificaciones_cabezera">Notificaciones</string>
    <string name="ajustes_alerta_notificacion_gas_descripcion">Avisame cuando los niveles sean moderados</string>
    <string name="notificacion_titulo_alerta_calidad_moderado">Calidad de aire moderado</string>
    <string name="notificacion_titulo_alerta_calidad_alto">Calidad del aire mala</string>
    <string name="notificacion_contenido_alerta_calidad">Estas expuesto a gases dañinos para tu salud</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_escaner">Escanear</string>
    <string name="title_mapa">Mapa</string>
    <string name="title_estadisticas">Estadísticas</string>
    <string name="title_perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_autentificacion">AutentificacionActivity</string>
 

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="correo">Correo</string>
    <string name="Contrasenya">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="repetir_contrasenya">Repetir Contraseña</string>
    <string name="crear_cuenta_pure_life">Crea tu cuenta Pure Life</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta? Créate una ahora.</string>
    <string name="escanear">Escanear</string>
    <string name="escaner">Escáner</string>
    <string name="desconectar">Desconectar</string>
    <string name="calidad_del_aire">Calidad del aire</string>
    <string name="notificacion_titulo_alerta_bateria_baja">El dispositivo tiene bateria baja.</string>
    <string name="notificacion_contenido_bateria_baja">No se notificara de la calidad del aire sin bateria</string>
    <string name="notificacion_titulo_alerta_averiado">Dispostivo fuera de servicio</string>
    <string name="notificacion_contenido_averiado">Este dispositivo no envia informacion</string>
    <string name="info_escaner_mediciones">Esperando mediciones…</string>
    <string name="estar_expuesto_a_nivel_muy_alto_de">Estas expuesto a un nivel muy alto de</string>
    <string name="estar_expuesto_a_nivel_alto_de">"Estas expuesto a un nivel alto de "</string>
    <string name="estar_expuesto_a_nivel_moderado_de">"Estas expuesto a un nivel moderado de "</string>
    <string name="iniciando_sesion">Iniciando sesión…</string>
    <string name="desconexionPorDistancia">Te has alejado demasiado del sensor. Se ha desconectado</string>


    <string name="infCO">La exposición extremadamente alta al monóxido de carbono puede causar la formación de carboxihemoglobina, que reduce la capacidad de la sangre para transportar oxígeno y puede causar un color rojo brillante en la piel y las membranas mucosas, dificultad respiratoria, colapso, convulsiones, coma y la muerte. </string>
    <string name="infNO2">Respirar altos niveles de NO2 puede producir quemaduras, espasmos y dilatación de los tejidos en la garganta y vías respiratorias superiores, reduciendo la oxigenación de los tejidos del cuerpo, produciendo acumulación de líquido en los pulmones y la muerte.</string>
    <string name="infSO2">La contaminación del aire por SO2 causa los siguientes efectos: Dificultad para respirar, inflamación de las vías respiratorias, irritación ocular por formación del ácido sulfuroso sobre las mucosas húmedas.</string>
    <string name="infO3">La exposición a altos niveles afecta al flujo expiratorio, y provoca sintomas como opresión en el pecho, tos, irritación de ojos, nariz y garganta y provoca una respuesta inflamatoria.</string>

    <string name="CO">CO:</string>
    <string name="SO2">SO2:</string>
    <string name="O3">O3:</string>
    <string name="NO2">NO2:</string>
    <string name="leve">LEVE</string>
    <string name="moderado">MODERADO</string>
    <string name="alto">ALTO</string>
    <string name="muyalto">MUY ALTO</string>
    <string name="tituloEfectos">Efectos de los gases</string>
    <string name="leer_m_s">Leer más</string>
    <string name="volver">Volver</string>
    <string name="buena">Buena</string>
    <string name="moderada">Moderada</string>
    <string name="mala">Mala</string>
    <string name="muy_mala">Muy mala</string>
    <string name="estas_mas_expuesto_a">Estas mas expuesto a:</string>
    <string name="no_tienes_posicion_asignada_de">No tienes posicion asignada de</string>
    <string name="casa">Casa</string>
    <string name="Trabajo">Trabajo</string>
    <string name="Exterior">Exterior</string>
    <string name="error_calidad_aire">Error inesperado</string>
    <string name="la_calidad_de_aire_respirada_hoy">La calidad de aire respirada hoy es</string>
</resources>