<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TituloEfectos"
                style="@style/TituloDeActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloEfectos" />

            <TextView
                android:id="@+id/tituloCO"
                style="@style/SubTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CO" />

            <TextView
                android:id="@+id/descCO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infCO" />

            <TextView
                android:id="@+id/tituloSO2"
                style="@style/SubTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SO2" />

            <TextView
                android:id="@+id/descSO2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infSO2" />

            <TextView
                android:id="@+id/tituloNO2"
                style="@style/SubTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NO2" />

            <TextView
                android:id="@+id/descNO2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infNO2" />

            <TextView
                android:id="@+id/tituloO3"
                style="@style/SubTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/O3" />

            <TextView
                android:id="@+id/descO3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infO3" />

        </LinearLayout>
    </ScrollView>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="0,1">
        <TableRow>
            <Button
                android:id="@+id/btVolver"
                style="@style/BotonPrimario"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/volver" />

            <Button
                android:id="@+id/btLeerMas"
                style="@style/BotonPrimario"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/leer_m_s" />
        </TableRow>
    </TableLayout>


</LinearLayout>