<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.autentificacion.Login.LoginFragment">


    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        app:layout_constraintEnd_toEndOf="@+id/editTextContrasenyaLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextContrasenyaLogin"
        app:layout_constraintTop_toBottomOf="@+id/textViewError" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/botonCrearCuenta"
        app:layout_constraintTop_toBottomOf="@+id/editTextContrasenyaLogin" />

    <EditText
        android:id="@+id/editTextContrasenyaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/Contrasenya"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
        app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/botonNoTienesCuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/botonLogin"
        app:layout_constraintTop_toBottomOf="@+id/botonLogin" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextCorreo" />

</androidx.constraintlayout.widget.ConstraintLayout>