<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.autentificacion.Registro.RegistroFragment">

    <TextView
        android:id="@+id/tituloDeActividadRegistro"
        style="@style/TituloDeActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="Crea tu cuenta Pure Life"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonCrearCuenta"
        style="@style/BotonPrimario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        app:layout_constraintEnd_toEndOf="@+id/editTextRepetirContrasenya"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRepetirContrasenya"
        app:layout_constraintTop_toBottomOf="@+id/checkTerminos" />

    <EditText
        android:id="@+id/editTextCorreo"
        style="@style/EditTextPrimario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextApellidos"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <EditText
        android:id="@+id/editTextRepetirContrasenya"
        style="@style/EditTextPrimario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/repetir_contrasenya"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
        app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
        app:layout_constraintTop_toBottomOf="@+id/editTextContrasenya"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNombre"
        style="@style/EditTextPrimario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/editTextApellidos"
        app:layout_constraintStart_toStartOf="@+id/tituloDeActividadRegistro"
        app:layout_constraintTop_toBottomOf="@+id/tituloDeActividadRegistro" />

    <EditText
        android:id="@+id/editTextApellidos"
        style="@style/EditTextPrimario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/tituloDeActividadRegistro"
        app:layout_constraintStart_toEndOf="@+id/editTextNombre"
        app:layout_constraintTop_toBottomOf="@+id/tituloDeActividadRegistro" />

    <EditText
        android:id="@+id/editTextContrasenya"
        style="@style/EditTextPrimario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/Contrasenya"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextApellidos"
        app:layout_constraintStart_toStartOf="@+id/editTextNombre"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextPhone"
        style="@style/EditTextPrimario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextContrasenya"
        app:layout_constraintStart_toStartOf="@+id/editTextContrasenya"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepetirContrasenya" />

    <CheckBox
        android:id="@+id/checkTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Acepto los "
        app:layout_constraintStart_toStartOf="@+id/textViewError"
        app:layout_constraintTop_toBottomOf="@+id/textViewError" />

    <Button
        android:id="@+id/botonTerminos"
        style="@style/BotonSinBordes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Términos y Condiciones"
        app:layout_constraintBottom_toBottomOf="@+id/checkTerminos"
        app:layout_constraintStart_toEndOf="@+id/checkTerminos"
        app:layout_constraintTop_toTopOf="@+id/checkTerminos" />

    <TextView
        android:id="@+id/textViewError"
        style="@style/TextoDeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/botonCrearCuenta"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>