<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.estadisticas.EstadisticasFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tituloDeActividadEstadisticas"
                style="@style/TituloDeActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Estadísticas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btInformacion2"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:contentDescription="Informacion sobre gases"
                android:src="@drawable/ic_baseline_info_24"
                android:visibility="visible"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvExposicionDeGasHoy"
            style="@style/SubTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tituloDeActividadEstadisticas"
            app:layout_constraintStart_toStartOf="@+id/tituloDeActividadEstadisticas"
            app:layout_constraintTop_toBottomOf="@+id/tituloDeActividadEstadisticas" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/cerrarGrafica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/tablaGases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/tbCO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/SubTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="@string/CO"
                        android:textAlignment="viewStart" />

                    <ProgressBar
                        android:id="@+id/pBarCO"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:max="10000"
                        android:minWidth="250dp"
                        android:minHeight="50dp"
                        android:progress="1" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tbNO2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/SubTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="@string/NO2"
                        android:textAlignment="viewStart" />

                    <ProgressBar
                        android:id="@+id/pBarNO2"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:max="100"
                        android:minWidth="250dp"
                        android:minHeight="50dp"
                        android:progress="1" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tbO3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/SubTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="@string/O3"
                        android:textAlignment="viewStart" />

                    <ProgressBar
                        android:id="@+id/pBarO3"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:max="120"
                        android:minWidth="250dp"
                        android:minHeight="50dp"
                        android:progress="1" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tbSO2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/SubTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="@string/SO2"
                        android:textAlignment="viewStart" />

                    <ProgressBar
                        android:id="@+id/pBarSO2"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:max="125"
                        android:minWidth="250dp"
                        android:minHeight="50dp"
                        android:progress="1" />


                </LinearLayout>


            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/grafico"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </com.github.mikephil.charting.charts.LineChart>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Grafica-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <com.example.rparcas.btleandroid2021.customViews.CalidadAireZona
                android:id="@+id/calidadZonaCasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icono="@drawable/ic_home_black_24dp"
                app:nombreSitio="@string/casa" />

            <com.example.rparcas.btleandroid2021.customViews.CalidadAireZona
                android:id="@+id/calidadZonaExterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icono="@drawable/ic_zona_exterior"
                app:nombreSitio="@string/Exterior" />

            <com.example.rparcas.btleandroid2021.customViews.CalidadAireZona
                android:id="@+id/calidadZonaTrabajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icono="@drawable/ic_zona_trabajo"
                app:nombreSitio="@string/Trabajo" />


        </LinearLayout>



    </LinearLayout>


</ScrollView>

