<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondoEscaner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.escaner.EscanerFragment">

    <TextView
        android:id="@+id/tituloDeActividadEscaner"
        style="@style/TituloDeActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/escaner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonEscanear"
        style="@style/BotonPrimario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:tag="escanear"
        android:text="@string/escanear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btInformacion"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="Informacion sobre gases"
        android:src="@drawable/info"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textViewInforMedicion"
        app:layout_constraintEnd_toEndOf="@+id/tituloDeActividadEscaner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tituloDeActividadEscaner"
        app:layout_constraintTop_toBottomOf="@+id/tituloDeActividadEscaner"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/contenedorImagenNivelPeligro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:elevation="0dp"
        android:padding="8dp"
        android:visibility="invisible"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/botonEscanear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInforMedicion"
        app:layout_constraintVertical_bias="0.733">

        <ImageView
            android:id="@+id/imageViewEscaner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="64dp"
            android:adjustViewBounds="false"
            android:background="@drawable/bottom_border"
            android:fitsSystemWindows="false"
            android:scaleType="centerInside"
            android:src="@drawable/ic_nivel2" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewInforMedicion"
        style="@style/SubTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/info_escaner_mediciones"
        android:textAlignment="textStart"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tituloDeActividadEscaner"
        app:layout_constraintStart_toStartOf="@+id/tituloDeActividadEscaner"
        app:layout_constraintTop_toBottomOf="@+id/tituloDeActividadEscaner" />


</androidx.constraintlayout.widget.ConstraintLayout>